--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 		
 		let draws = {};
 		
-		let canvas,ctx;
+		let canvas,ctx,strokeStyle;
 		let sendBufferCanvas, sendBufferCtx;
 		let dragging = false;
 		
@@ -21,6 +21,8 @@
 			ctx = canvas.getContext('2d');
 			ctx.lineWidth = 3;
 			ctx.strokeStyle = "red";
+			strokeStyle = "red";
+			document.querySelector('#strokeStyleChooser').onchange = doStrokeStyleChange;
 			
 			socket = io.connect();
 			setupSocket();
@@ -61,9 +63,7 @@
 			sendBufferCanvas.width = 700;
 			sendBufferCtx = canvas.getContext('2d');
 			
-			//ctx.fillRect(100, 100, 200, 200);
-			
-			//sendBufferCtx.fillRect(0,0,200,200);
+			drawGrid(ctx,'lightgray', 10, 10);
 			
 			const data = {
 				x: 0, 
@@ -94,6 +94,7 @@
 		function doMousedown(e){
 			dragging = true;
 			var mouse = getMouse(e);
+			ctx.strokeStyle = strokeStyle;
 			ctx.beginPath();
 			ctx.moveTo(mouse.x,mouse.y);
 		}
@@ -101,7 +102,7 @@
 		function doMousemove(e) {
 			if(! dragging) return;
 			var mouse = getMouse(e);
-			ctx.strokeStyle = "red";
+			ctx.strokeStyle = strokeStyle;
 			ctx.lineWidth = 3;
 				
 			ctx.lineTo(mouse.x, mouse.y);
@@ -155,11 +156,62 @@
 			
 			socket.emit("draw", data);
 		}, 3000);
+		
+		function drawGrid(ctx, color, cellWidth, cellHeight){
+		// save the current drawing state as it existed before this function was called
+		ctx.save()
+		
+		// set some drawing state variables
+		ctx.strokeStyle = color;
+		//ctx.fillStyle = '#ffffff';
+		ctx.lineWidth = 0.5;
+		//ctx.fillRect(0, 0, ctx.canvas.width, ctx.canvas.height);
+		
+		// vertical lines all set!
+		for (var x = cellWidth + 0.5; x < ctx.canvas.width; x += cellWidth) {
+			ctx.beginPath();
+			ctx.moveTo(x, 0);
+			ctx.lineTo(x, ctx.canvas.height);
+			ctx.stroke();
+		}
+		
+		for (var x = cellHeight - 0.5; x < ctx.canvas.height; x += cellHeight) {
+			ctx.beginPath();
+			ctx.moveTo(0, x);
+			ctx.lineTo(ctx.canvas.width, x);
+			ctx.stroke();
+		}
+		
+		
+		// restore the drawing state
+		ctx.restore();
+	}
+	
+	function doStrokeStyleChange(e){
+		strokeStyle = e.target.value;
+	 }
+		
 		window.onload = init;
     </script>
 </head>
 <body>
 <canvas id="mainCanvas" width="700" height="500">Get a real browser!</canvas>
+<div id="controls">
+		<label>Stroke Color: 
+			<select id="strokeStyleChooser">
+				<option value="red" selected>red</option>
+				<option value="green">green</option>
+        		<option value="blue">blue</option>
+        		<option value="yellow">yellow</option>
+				<option value="purple">purple</option>
+        		<option value="orange">orange</option>
+        		<option value="pink">pink</option>
+				<option value="black">black</option>
+        		<option value="grey">grey</option>
+        		<option value="coral">coral</option>
+    		</select>
+    	</label>
+    </div>
 <h2>Click to Draw!</h2>
 </body>
 </html>
